syntax = "proto3";

package keyper.api.v1;

option go_package = "github.com/koy/keyper/pkg/api/proto;proto";

import "google/protobuf/timestamp.proto";

// SecretType defines the type of secret being stored
enum SecretType {
  SECRET_TYPE_UNSPECIFIED = 0;
  SECRET_TYPE_CREDENTIAL = 1;  // Username/password pair
  SECRET_TYPE_TEXT = 2;        // Plain text note
  SECRET_TYPE_BINARY = 3;      // Binary data (files, images, etc.)
  SECRET_TYPE_BANK_CARD = 4;   // Credit/debit card information
}

// User represents a user account
message User {
  string id = 1;
  string username = 2;
  bytes password_hash = 3;
  bytes password_salt = 4;
  bytes encryption_key_verifier = 5;
  bytes verifier_salt = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  bool is_locked = 9;
  int32 failed_login_attempts = 10;
  google.protobuf.Timestamp locked_until = 11;
}

// Secret represents an encrypted secret entry
message Secret {
  string id = 1;
  string user_id = 2;
  SecretType type = 3;
  string title = 4;
  string encrypted_data = 5;  // Base64-encoded encrypted payload
  Metadata metadata = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  int64 version = 9;  // For conflict resolution
  bool is_deleted = 10;  // Soft delete flag for sync
}

// Metadata contains additional information about a secret
message Metadata {
  string category = 1;
  repeated string tags = 2;
  string notes = 3;
  string url = 4;
  bool is_favorite = 5;
  map<string, string> custom_fields = 6;
}

// RefreshToken represents a refresh token for session management
message RefreshToken {
  string id = 1;
  string user_id = 2;
  string token_hash = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp expires_at = 5;
  bool is_revoked = 6;
  string device_info = 7;
}

// CredentialData for SECRET_TYPE_CREDENTIAL
message CredentialData {
  string username = 1;
  string password = 2;
  string email = 3;
  string url = 4;
  repeated CustomField custom_fields = 5;
}

// TextData for SECRET_TYPE_TEXT
message TextData {
  string content = 1;
}

// BinaryData for SECRET_TYPE_BINARY
message BinaryData {
  string filename = 1;
  string mime_type = 2;
  int64 size = 3;
  bytes data = 4;
}

// BankCardData for SECRET_TYPE_BANK_CARD
message BankCardData {
  string cardholder_name = 1;
  string card_number = 2;
  string expiry_month = 3;
  string expiry_year = 4;
  string cvv = 5;
  string pin = 6;
  string bank_name = 7;
}

// CustomField for extensible key-value pairs
message CustomField {
  string key = 1;
  string value = 2;
  bool is_sensitive = 3;  // Whether this field should be masked in UI
}
